2002-02-23  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/draw.c: New draw completed including new icons and cursors
	* src/gcompris/gcompris.c: Added gcompris_set_cursor in the gcompris API

2002-02-22 Pascal Georges <pascal.georges1@free.fr>

	* src/gcompris/bar.c : bar_play_sound is played only if no other sound is played or pending

2002-02-21 Pascal Georges <pascal.georges1@free.fr>

	* src/gcompris/soundutil.[ch] : changed the way ogg sounds are played. Several policies are implemented,
	  but only the currently used (PLAY_AFTER_CURRENT) has been tested (very quickly tested).

2002-02-19  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/draw.c: anchor improved. New fill tool added (replace old move tool)

2002-02-17  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/shapegame.c: implemented the discovering of the maxlevel
	* src/boards/paratrooper.c: fixed to have only 1 cloud even after requesting help
	* src/gcompris/config.c: fixed the translation of countries
	* src/boards/draw.c: start to implement a usual anchor system

2002-02-17 Pascal Georges <pascal.georges1@free.fr>

	* src/boards/clickgame.c : level stop at 10/10 (formerly 11/10 ..)
	* src/boards/gletters.c : fixed the bug at the end of the board (score at 11/10)
	* src/boards/smallnumbers.c : fixed the bug at the end of the board (score at 11/10)
	* src/gcompris/bonus.c : fixed a bug : RANDOM was not properly used
	* src/boards/algebra_guesscount.c : bonus is now randomized

2002-02-15 Pascal Georges <pascal.georges1@free.fr>
	* src/gcompris/gameutil.[ch] : removed sound related functions
	* src/gcompris/soundutil.[ch] : new files contain sound related functions
	  changed the way sound is played : we play the first (current sound)
		and keep the last introduced one in the pending queue. Others are killed.

2002-02-12 Pascal Georges <pascal.georges1@free.fr>
	* src/boards/babyshape.c : level starts now at 1, and ends at 4 (coherent to the 4 xml files for this level)
